:lipstick: removed italic

--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -105,7 +105,7 @@
             background-color: #202020;
 
             .navbar-navigation-link {
-                font-style: italic;
+                //font-style: italic;
                 font-size: 1.8em;
                 padding: 4px 0 4px 50px;
                 @include transition(
