--- a/src/app/sites/stage/stage.component.scss
+++ b/src/app/sites/stage/stage.component.scss
@@ -25,7 +25,7 @@
                 .performance-poster-label-container {
                     opacity: 1;
                     text-transform: uppercase;
-                    font-style: italic;
+                    //font-style: italic;
                     color: $main-text-color-on-dark-bg;
                     width: 100%;
                     background-color: transparent;
