--- a/src/app/sites/team/team.component.scss
+++ b/src/app/sites/team/team.component.scss
@@ -78,7 +78,7 @@
                         font-size: 22px;
                         line-height: 24px;
                         font-weight: 600;
-                        font-style: italic;
+                        //font-style: italic;
                         text-transform: uppercase;
                     }
                     .team-member-tag-task {
