--- a/src/app/components/schedule/schedule.component.scss
+++ b/src/app/components/schedule/schedule.component.scss
@@ -75,6 +75,7 @@
                     .schedule-info-icon {
                         display: inline-block;
                         margin-right: 10px;
+                        margin-left: 7px;
                     }
                 }
             }
