--- a/src/app/sites/current/current-details/current-details.component.scss
+++ b/src/app/sites/current/current-details/current-details.component.scss
@@ -12,7 +12,12 @@
         .post-title {
             text-align: center;
             text-transform: uppercase;
-            margin: 20px 0 0 0;
+            margin-top: 20px;
+            margin-left: 0;
+            margin-right: 0;
+            margin-bottom: 20px;
+            line-height: 1.3em;
+            font-size: 2em;
         }
         .post-date {
             display: inline-block;
@@ -37,6 +42,11 @@
 
 @media (min-width: $media-breakpoint-md) {
   .blog-post-details {
+    .blog-post-details-content {
+      .post-title {
+        margin-bottom: 30px;
+      }
+    }
     .blog-post-details-video {
       height: 400px;
     }
