--- a/src/app/components/schedule/schedule.component.html
+++ b/src/app/components/schedule/schedule.component.html
@@ -1,7 +1,11 @@
 <div class="schedule-component">
   <div class="schedule-header">
-    <h2 class="schedule-title">Stundenplan<span *ngIf="location"> Studio {{location.name}}</span></h2>
-    <div class="schedule-navigation-container" [ngClass]="courseShortId ? 'schedule-navigation-hide-filters' : ''">
+    <h2 class="schedule-title" (click)="toggleScheduleOpen()">
+      <i class="fas fa-caret-right navigation-icon" [ngClass]="scheduleOpen ? 'schedule-open' : ''" *ngIf="displayDrawer"></i>
+      <span>Stundenplan</span>
+      <span *ngIf="location"> Studio {{location.name}}</span>
+    </h2>
+    <div class="schedule-navigation-container" [ngClass]="[courseShortId ? 'schedule-navigation-hide-filters' : '', scheduleOpen === false ? 'schedule-closed' : 'schedule-open']">
       <div class="schedule-navigation-filter-segments">
         <div class="schedule-navigation-segment schedule-navigation-age-groups">
           <form>
@@ -26,7 +30,7 @@
       </div>
     </div>
   </div>
-  <div class="schedule-container">
+  <div class="schedule-container" [ngClass]="scheduleOpen === false ? 'schedule-closed' : 'schedule-open'">
     <div class="day-container" *ngFor="let appointments of courseAppointmentsByDay; let dayIndex = index" [ngClass]="appointments.length === 0 ? 'day-container-empty' : ''" [ngStyle]="{'width': columnWidth}">
       <div class="day-title">{{getDayTitle(dayIndex)}}</div>
       <div class="appointment-container" *ngFor="let appointment of appointments" [routerLink]="getCourseLink(appointment)" [ngClass]="[getCourseLink(appointment) ? 'has-course-link' : '', displayColors ? 'display-colors' : '']">
