--- a/src/app/sites/courses/course-information/course-information.component.html
+++ b/src/app/sites/courses/course-information/course-information.component.html
@@ -3,8 +3,8 @@
 </div> -->
 <div class="courses-content-container main-content-container main-content-container-padding" *ngIf="text">
   <div class="courses-content main-content">
-    <app-schedule locationInitials='MG'></app-schedule>
-    <app-schedule locationInitials='LB'></app-schedule>
+    <app-schedule locationInitials='MG' displayNavigationDrawer='true'></app-schedule>
+    <app-schedule locationInitials='LB' displayNavigationDrawer='true'></app-schedule>
     <a name="preise"></a>
     <h2 id="preise">Preise</h2>
     <div class="courses-gerneral-description" [innerHTML]='text'></div>
