--- a/src/app/main-page/main-page.component.scss
+++ b/src/app/main-page/main-page.component.scss
@@ -26,6 +26,7 @@ div {
         height: 100%;
     }
     .video-overlay {
+        display: none;
         position: absolute;
         top: 0;
         left: 0;
