:lipstick: no more italic

--- a/src/app/courses-overview/courses-overview.component.scss
+++ b/src/app/courses-overview/courses-overview.component.scss
@@ -74,7 +74,7 @@
                 .course-tag-container {
                     .thumb-info-block {
                         .thumb-title {
-                            font-style: italic;
+                            //font-style: italic;
                         }
                     }
                     &:hover {
