:bug: Fix images on iPhones

--- a/src/app/main-page/main-page-section/main-page-section.component.html
+++ b/src/app/main-page/main-page-section/main-page-section.component.html
@@ -10,3 +10,9 @@
     </div>
   </div>
 </div>
+<div class="main-page-section-content mobile-only" [ngClass]="section.routerLink ? 'section-link' : ''" (click)="goToSection(section)">
+  <div  class="main-page-section-caption">{{section.title}}</div>
+  <p class="main-page-section-description">
+    {{section.description}}
+  </p>
+</div>
