:bug: Fix loading animation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
 <app-header></app-header>
+<div class="nav-spacer">
+</div>  
 <router-outlet></router-outlet>
 <app-footer></app-footer>
 <div class="loading-overlay" [ngClass]="[pageLoaded ? 'hide-overlay' : '', removeOverlay ? 'remove-overlay' : '']">
