--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,7 @@
     position: fixed;
     background-color: $main-background-color-dark;
     opacity: 1;
+    top: 0;
     @include transition(opacity 0.3s ease);
     text-align: center;
     &.hide-overlay {
