--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,49 +1,51 @@
-<div class="navbar-container main-content-container main-content-container-padding">
-  <div class="navbar main-content" [ngClass]="isMobileNavOpen === true ? 'mobile-nav-open': ''">
-    <div routerLink="/" class="logo-container">
-      <div class="logo"></div>
-      <div class="logo-label-container">
-        <div class="logo-label">
-          <span>Tanztheater</span>
-          <span>Anita Hanke</span>
+<div class="navbar-container">
+  <div class="main-content-container main-content-container-padding">
+    <div class="navbar main-content" [ngClass]="isMobileNavOpen === true ? 'mobile-nav-open': ''">
+      <div routerLink="/" class="logo-container">
+        <div class="logo"></div>
+        <div class="logo-label-container">
+          <div class="logo-label">
+            <span>Tanztheater</span>
+            <span>Anita Hanke</span>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="navbar-menu-icon-container" (click)="toggleMobileNav()">
-      <div class="navbar-menu-icon">
-        <div class="bar bar1"></div>
-        <div class="bar bar2"></div>
-        <div class="bar bar3"></div>
+      <div class="navbar-menu-icon-container" (click)="toggleMobileNav()">
+        <div class="navbar-menu-icon">
+          <div class="bar bar1"></div>
+          <div class="bar bar2"></div>
+          <div class="bar bar3"></div>
+        </div>
       </div>
-    </div>
-    <div class="navbar-navigation">
-      <a class="navbar-navigation-link home-link" routerLink="/" (click)="toggleMobileNav()">
-        Home
-      </a>
-      <div class="dropdown">
-        <a class="navbar-navigation-link" routerLink="/kurse" (click)="toggleMobileNav()">Kurse
-          <i class="dropdown-arrow fa fa-caret-down"></i>
+      <div class="navbar-navigation">
+        <a class="navbar-navigation-link home-link" routerLink="/" (click)="toggleMobileNav()">
+          Home
         </a>
-        <div class="dropdown-content">
-          <a class="navbar-navigation-link dropdown-link" routerLink="/kurse" (click)="toggleMobileNav()">Kurse</a>
-          <a class="navbar-navigation-link dropdown-link" routerLink="/kurs-informationen" (click)="toggleMobileNav()">Preise und Stundenpläne</a>
+        <div class="dropdown">
+          <a class="navbar-navigation-link" routerLink="/kurse" (click)="toggleMobileNav()">Kurse
+            <i class="dropdown-arrow fa fa-caret-down"></i>
+          </a>
+          <div class="dropdown-content">
+            <a class="navbar-navigation-link dropdown-link" routerLink="/kurse" (click)="toggleMobileNav()">Kurse</a>
+            <a class="navbar-navigation-link dropdown-link" routerLink="/kurs-informationen" (click)="toggleMobileNav()">Preise und Stundenpläne</a>
+          </div>
         </div>
+        <a class="navbar-navigation-link" routerLink="/blog" (click)="toggleMobileNav()">
+          Aktuelles
+        </a>
+        <a class="navbar-navigation-link" routerLink="/auftritte" (click)="toggleMobileNav()">
+          Auftritte
+        </a>
+        <a class="navbar-navigation-link" routerLink="/team" (click)="toggleMobileNav()">
+          Team
+        </a>
+        <a class="navbar-navigation-link" routerLink="/standorte" (click)="toggleMobileNav()">
+          Standorte
+        </a>
+        <a class="navbar-navigation-link" routerLink="/kontakt" (click)="toggleMobileNav()">
+          Kontakt
+        </a>
       </div>
-      <a class="navbar-navigation-link" routerLink="/blog" (click)="toggleMobileNav()">
-        Aktuelles
-      </a>
-      <a class="navbar-navigation-link" routerLink="/auftritte" (click)="toggleMobileNav()">
-        Auftritte
-      </a>
-      <a class="navbar-navigation-link" routerLink="/team" (click)="toggleMobileNav()">
-        Team
-      </a>
-      <a class="navbar-navigation-link" routerLink="/standorte" (click)="toggleMobileNav()">
-        Standorte
-      </a>
-      <a class="navbar-navigation-link" routerLink="/kontakt" (click)="toggleMobileNav()">
-        Kontakt
-      </a>
     </div>
   </div>
 </div>
