:bug: Fix header images

--- a/src/app/sites/contact/contact.component.html
+++ b/src/app/sites/contact/contact.component.html
@@ -1,4 +1,4 @@
-<app-header-image [image]='backgroundImage' [listId]='contactListShortId' title='Kontakt' *ngIf="backgroundImage"></app-header-image>
+<app-header-image [image]='backgroundImage' [listId]='mainPageListShortId' title='Kontakt' *ngIf="backgroundImage"></app-header-image>
 <div *ngIf="contact" class="contact-content-container main-content-container main-content-container-padding">
   <!--<form #f="ngForm"  
     (ngSubmit)="onSubmit(f.value)"  
