--- a/src/app/components/header-image/header-image.component.html
+++ b/src/app/components/header-image/header-image.component.html
@@ -1,6 +1,6 @@
 <div class="header-image-component">
   <div class="header-image-container">
-    <div class="header-image" [ngStyle]="getBackgroundStyle(image)">
+    <div class="header-image" [ngStyle]="getBackgroundStyle(image)" *ngIf="image">
       <div class="header-image-title header-image-title-move-in">
         <h1>{{title}}</h1>
       </div>
