--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,5 @@
 @import './variables.scss';
+@import './mixins';
 
 /* You can add global styles to this file, and also import other style files */
 body, html {
@@ -51,6 +52,22 @@ app-current {
 
 .main-title {
     margin: 0;
+}
+
+.tth-button {
+    border: 1px solid $main-text-color;
+    padding: 3px 12px;
+    margin: 5px 0;
+    border-radius: 18px;
+    display: inline-block;
+    @include transition(background-color 0.3s ease);
+    .tth-button-icon {
+        margin-right: 10px;
+    }
+    &:hover {
+        color: $main-background-color-dark;
+        background-color: $main-text-color;
+    }
 }
 
 /*************
