--- a/src/app/sites/current/current.component.scss
+++ b/src/app/sites/current/current.component.scss
@@ -14,6 +14,7 @@
                     display: block;
                     height: 300px;
                     background-size: cover;
+                    background-position: center;
                     background-color: $border-color-dark-2;
                     @include flexbox();
                     @include flex-direction(row);
